feat: add endpoint for returning genres
